banner fixed and buttons are aligned

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,34 @@
   display: flex;
 }
 
-.container {
+.header-container {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  top: 0;
+}
 
+.header-logo {
+  margin-top: 30px;
+  margin-left: 50px;
+}
+
+.header-logo img {
+  width: 200px;
+  height: 72px;
+}
+
+.header-buttons-container {
+  color: #fff;
+  display: flex;
+  gap: 10px;
+  margin-right: 100px;
+  font-size: 14px;
+}
+
+.header-buttons-container a {
+  text-decoration: none;
+  color: inherit;
 }
